--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -1,3 +1,9 @@
+//---- NAVIGATION BARS ----//
+$navbar-height: 52px;
+$breadcrumb-height: 30px;
+$alert-height: 50px;
+
+//---- COLORS ----//
 $green-active: #42CA73;
 $green-active-dark: #69A169;
 $green-faded-active: #97CC97;
